# rag_basic

./: .gitignore  1.QuickStart.md  10.总结与展望.md  2.LLM基础.md  3.LLM进阶.md  4.提示工程.md  5.RAG基础.md  6.RAG核心流程.md  7.RAG评估指标与方法.md  8.性能优化与最佳实践.md  9.常见问题FAQ.md  README.md  术语表.md
samples/quickstart/: .gitignore  main.py  only_llm.py  pyproject.toml  rag_basic.py
samples/quickstart/data/: faq.md
samples/rag_basic/: chunker.py  embedder.py  extractor.py  llm_with_rag.py  main.py  store_manager.py
